--- a/home-page.html
+++ b/home-page.html
@@ -90,7 +90,7 @@
       <a href="login.php"><button>Logout</button></a>
       <!--currently not at right location on page-->
      
- <button class="tablink" onclick="openPage('Scheduling-Appointments', this, 'white')" id="defaultOpen">Scheduling Appointments</button>
+ <button class="tablink" onclick="openPage('Scheduling', this, 'white')" id="defaultOpen">Scheduling</button>
  <button class="tablink" onclick="openPage('Policies-FAQ', this, 'white')">Policies</button>
  <button class="tablink" onclick="openPage('Notifications', this, 'white')">Notifications</button>
  <button class="tablink" onclick="openPage('Contact-Info', this, 'white')">Contact Info</button>
