--- a/home-page.html
+++ b/home-page.html
@@ -27,7 +27,7 @@
      #proset {text-align:right;}
      
      .tablink {
-     background-color: transparent;
+     background-color: #3C85B5;
      color: black;
      border: 2px solid black;
      float: left;
