--- a/home-page.html
+++ b/home-page.html
@@ -93,7 +93,7 @@
  <button class="tablink" onclick="openPage('Contact-Info', this, 'white')">Contact Info</button>
  
  <div id="Policies-FAQ" class="tabcontent">
- <button class="tablink" onclick="openPage('Policies', this, 'white')" id="defaultOpen">Policies</button>
+ <button class="tablink" onclick="openPage('Policies', this, 'white')">Policies</button>
  <button class="tablink" onclick="openPage('FAQ', this, 'white')">FAQ</button>
      
  
