--- a/home-page.html
+++ b/home-page.html
@@ -157,7 +157,7 @@
 </div>
      </div>
      
-<div id="Contact-Info" class="tabcontent">          
+<div id="Notifications" class="tabcontent">          
 <div id="pass">
   <h2 style="text-align:center;">Student Pass</h2>
   <hr>
