--- a/home-page.html
+++ b/home-page.html
@@ -101,6 +101,10 @@
  <button class="tablink" onclick="openPage('Notifications', this, 'white')">Notifications</button>
  <button class="tablink" onclick="openPage('Contact-Info', this, 'white')">Contact Info</button>
  
+ <div id="Scheduling" class="tabcontent">    
+ <a href="https://calendar.google.com/calendar/selfsched?sstoken=UUs2ME9xbE5WYkNnfGRlZmF1bHR8OTc4NzM0ZWMzMzJhZWZlN2JmMGI4NTlhOTU2NTExOTk"><button>Schedule Appointment<br><img src="calendar.jpg"></button></a>
+
+     
  <div id="Policies-FAQ" class="tabcontent">
  <button class="tablink" onclick="openPage('Policies', this, 'white')">Policies</button>
  <button class="tablink" onclick="openPage('FAQ', this, 'white')">FAQ</button>
