--- a/home-page.html
+++ b/home-page.html
@@ -50,7 +50,8 @@
               padding: 10px;
               background-color: white;
               margin-left: 40%;
-              margin-top: 20px;}
+              margin-top: 20px;
+            }
     </style>
  </head>
  
