--- a/main-page.html
+++ b/main-page.html
@@ -42,7 +42,7 @@
             background-color: white;
             }
         
-        #google_translate_element {text-align: right;
+        #google_translate_element {text-align: right;}
             
         #timecard {text-align: left;
               display: inline-block;
