--- a/main-page.html
+++ b/main-page.html
@@ -101,7 +101,7 @@
     
  
  <div id="Policies" class="tabcontent">
-     <div id="table".
+     <div id="table">
    <h3>Policies</h3>
  <p>Counselors must...</p>
  <ul>
