--- a/main-page.html
+++ b/main-page.html
@@ -117,7 +117,7 @@
         
  
  <div id="FAQ" class="tabcontent">
-     <div id="table'>
+     <div id="table">
    <h3>Frequently Asked Questions</h3>
    <p>TEST</p> 
       </div>        
