--- a/main-page.html
+++ b/main-page.html
@@ -96,7 +96,7 @@
  
      
  <div id="Scheduling" class="tabcontent">    
- <a href="https://calendar.google.com/calendar/selfsched?sstoken=UUs2ME9xbE5WYkNnfGRlZmF1bHR8OTc4NzM0ZWMzMzJhZWZlN2JmMGI4NTlhOTU2NTExOTk"><button>Schedule Appointment<br><img src="calendar.jpg"></button></a>
+ <a href="https://calendar.google.com/calendar/selfsched?sstoken=UUs2ME9xbE5WYkNnfGRlZmF1bHR8OTc4NzM0ZWMzMzJhZWZlN2JmMGI4NTlhOTU2NTExOTk" style="text-align:center;"><button>Schedule Appointment<br><img src="calendar.jpg"></button></a>
  </div>     
     
  
