--- a/main-page.html
+++ b/main-page.html
@@ -101,7 +101,10 @@
     
  
  <div id="Policies" class="tabcontent">
-     <div id="timecard">
+     <div id="policy">
+<a href="https://www.schoolcounselor.org/asca/media/asca/Ethics/EthicalStandards2016.pdf"><button>ASCA Guidelines<br><img src="ASCA.png"></button></a>
+</div>
+     <div id="timecard">  
    <h3>Policies</h3>
  <p>Counselors must...</p>
  <ul>
