--- a/main-page.html
+++ b/main-page.html
@@ -112,7 +112,7 @@
    <li>Keep information confidential unless legal requirements demand otherwise.</li>
    <li>Report if the student intends to harm themselves or others.</li>
    <li>Convey highly sensitive information through phone call or private conversation.</li>
-   <li>Not be related to the student immediately.</li>
+   <li>Design and deliver comprehensive school counseling programs that are integral to the school’s academic mission.</li>
    <li>Provide a list of resources for outside agencies for students in distress.</li>
    <li>Report incidents of bullying, dating violence, child abuse, and sexual harassment.</li>
  </ul>
