--- a/main-page.html
+++ b/main-page.html
@@ -4,11 +4,15 @@
        font: 400 100px/1.3 'Oleo Script', Helvetica, sans-serif;
        text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
        text-align:center;}
-    body {
-       background-image: url("Background.jpg");
-       background-repeat: no-repeat;
-       background-color:#add8e6;
- 	   }
+   body {
+      background-image: url("Background.jpg");
+      background-repeat: no-repeat;
+      background-color:#add8e6;
+	  background-size: 1080px 1920px;
+      height: 100%;
+      margin: 0;
+      font-family: Arial;
+	   }
     
  	   
      #emergency {text-align:center;font-size:20px;}
