--- a/main-page.html
+++ b/main-page.html
@@ -134,7 +134,7 @@
    
  <div id="Contact-Info" class="tabcontent">       
    <div id="table">
-  <table>
+	   <table>
     <thead>
       <tr>
         <th>Contact Name</th>
@@ -143,6 +143,9 @@
       </tr>
     </thead>
     <tbody>
+      <tr>
+	<td>L. Brown</td>
+        <td>labrown3@aacps.org</td>
       <tr>
         <td>Suicide Hotline</td>
         <td>1-800-273-8255</td>
