--- a/main-page.html
+++ b/main-page.html
@@ -139,7 +139,7 @@
       <tr>
         <th>Contact Name</th>
         <br>
-        <th>Phone Number</th>
+        <th>Contact Info</th>
       </tr>
     </thead>
     <tbody>
