--- a/main-page.html
+++ b/main-page.html
@@ -53,7 +53,7 @@
               border: 3px black solid;
               padding: 10px;
               background-color: white;
-              margin-left: 25%;
+	      text-align: center;
               margin-top: 20px;
             
             }
